# Saler

./: .editorconfig  .env.example  .env.template  .gitignore  .gitlab-ci.yml  .gitmessage  .mypy.ini  .pre-commit-config.yaml  .prettierrc  AI_LEAD_SCORING_COMPLETION_REPORT.md  AI_LEAD_SCORING_README.md  ALEMBIC_MIGRATIONS_COMPLETION_REPORT.md  ANALYTICS_DASHBOARD_COMPLETION_REPORT.md  CI-FIX-SUMMARY.md  CODESPACE-LINK-REAL.md  COMPREHENSIVE_MONITORING_SYSTEM_REPORT.md  CREATE-CODESPACE-3-MINUTES.md  DASHBOARD_UX_IMPROVEMENT_COMPLETION_REPORT.md  DATABASE_ASYNC_SYSTEM_COMPLETION_REPORT.md  DATABASE_OPTIMIZATION_GUIDE.md  DATABASE_OPTIMIZATION_INTEGRATION_REPORT.md  DOCKER_ENHANCEMENT_REPORT.md  DOCKER_README.md  DOCKER_SETUP_COMPLETION_REPORT.md  FINAL-ALTERNATIVES.md  FINAL-CODESPACE-LINK.md  GITHUB_CODESPACE_SETUP.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_READINESS_COMPLETE_REPORT.md  LAUNCH_READINESS_REPORT.md  LEAD_INTELLIGENCE_README.md  MAKEFILE_COMPLETION_REPORT.md  MAKEFILE_GUIDE.md  MONITORING_README.md  MONITORING_SYSTEM_README.md  NEXT_STEPS_GUIDE.md  OPENTELEMETRY_TRACING_COMPLETION_REPORT.md  POSTGRESQL_PRODUCTION_SETUP.md  POSTGRESQL_SETUP_SUMMARY.md  PRE_COMMIT_README.md  (+31 more)
.devcontainer/: devcontainer-ready.json  devcontainer.json  postCreate.sh  quick-start.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/environments/: README.md  approval-rules.md  environment-variables.yaml
.github/workflows/: audit.yml  backend-tests.yml  backup.yml  cd.yml  ci.yml  comprehensive-testing.yml  deploy.yml  docs.yml  documentation.yml  monitoring.yml  notify.yml  performance.yml  pre-commit.yml  release.yml  scan.yml  security.yml  simple-ci.yml  test.yml
docker/: alert_rules_tracing.yml  alertmanager-tracing.yml  entrypoint.sh  grafana.ini  health-check.sh  logrotate.conf  nginx.conf  nginx.prod.conf  otel-collector-config.yaml  prometheus-tracing.yml  prometheus.yml  redis-cache.conf  redis-production.conf  redis-sentinel.conf  redis-sessions.conf  redis.conf  security-config.yml  security.conf  ssl.conf
docker/postgres/: pg_hba.conf  postgresql.conf
docs/: frontend-fixes.md
docs/development/: best-practices.md  contribution-guidelines.md  ide-configurations-report.md  ide-setup.md  quick-start.md  troubleshooting.md  workflow-guide.md
docs/technical/: README.md
docs/technical/api/: authentication.md  endpoints.md  examples.md  index.md  webhooks.md
docs/user-guide/: advanced-settings.md  ai-features.md  dashboard.md  faq.md  index.md  integrations.md  leads-management.md  messaging-system.md  setup-account.md  videos.md
frontend/: .eslintrc.js  .eslintrc.json  .prettierrc  ANALYTICS_HOOKS_REPORT.md  API_ROUTES_COMPLETION_REPORT.md  DASHBOARD_TASK_REPORT.md  ERROR_HANDLING_TASK_COMPLETION_REPORT.md  FINAL_HOOKS_COMPLETION_REPORT.md  FINAL_LOADING_ERROR_SYSTEM_REPORT.md  HOOKS_APPLICATION_GUIDE.md  HOOKS_CREATION_COMPLETION_REPORT.md  INTEGRATION_ERROR_HANDLING_README.md  JEST_SETUP_COMPLETION_REPORT.md  LOADING_ERROR_BOUNDARIES_COMPLETION_REPORT.md  LOADING_ERROR_SYSTEM_README.md  MOCK_DATA_REMOVAL_REPORT.md  NEXT_BUILD_UNIFICATION_REPORT.md  REACT_QUERY_IMPLEMENTATION_REPORT.md  README-AUTH.md  README.md  README_PLAYBOOKS.md  TASK_COMPLETION_REPORT.md  TASK_COMPLETION_SUMMARY.md  ZOD_VALIDATION_README.md  ZOD_VALIDATION_SYSTEM_COMPLETION_REPORT.md  jest.config.js  jest.setup.ts  lighthouserc.js  next.config.js  package.json  tailwind.config.js  test-apis-standalone.js  tsconfig.json
frontend/examples/: updated-advanced-messages-page.tsx  updated-playbooks-page.tsx  updated-reports-page.tsx
frontend/scripts/: bundle-analyzer.ts  optimize-performance.sh
frontend/src/: i18n.ts  middleware.ts
frontend/tests/: README.md  setup.ts
grafana-dashboards/: application-performance.json  opentelemetry-tracing.json  saler-prometheus-advanced.json  security-metrics.json  system-overview.json  user-analytics.json
k8s/: backend-deployment.yml  enhanced-backend-deployment.yml  enhanced-frontend-deployment.yml  frontend-deployment.yml  ingress.yml  monitoring-deployment.yml  monitoring.yml  postgres-deployment.yml  redis-deployment.yml  secrets.yml  security-policies.yml
monitoring/: access-logs.py  advanced-alerting-system.py  advanced-health-check-system.py  advanced-logging-system.js  advanced-performance-monitoring.md  advanced-performance-monitoring.py  alert-rules.yml  alert-testing.py  alertmanager.yml  analytics.js  app-metrics.js  cache-performance.js  conversion-tracking.js  database-performance.py  error-analysis.py  error-capture.py  error-notifications.js  error-tracking.js  escalation-rules.js  feature-usage.js  health-checks.py  intrusion-detection.js  monitoring-config.yaml  notification-channels.js  performance-dashboard.json  performance-tracking.js  prometheus.yml  recording-rules.yml  requirements-essential.txt  requirements-monitoring.txt  response-time-tracking.js  security-alerts.js  security-audit.py  sentry-config.js  simple_monitoring_test.py  system-metrics.sh  test_monitoring_system.py  user-journey.js  user-tracking.js
monitoring/advanced-performance/: PROJECT_SUMMARY.md  advanced-alerting-system.js  advanced-reporting-system.js  ai-analytics-engine.js  automated-optimization-system.js  dashboard-visualization-system.js  index.js  integration-config.js  real-time-collector.js  setup-deployment.js  testing-validation-system.js
monitoring/grafana/: dashboard.json
performance/: performance_test.py
scripts/: backup.sh  cache_health_check.py  dev.sh  docker-optimize.sh  docker-performance-optimizer.sh  health-check.sh  ide.sh  log-cleanup.sh  migration.sh  monitoring-setup.sh  performance-report.py  pre-commit-install.sh  pre-commit-test.sh  quick-init.sh  reset.sh  restore.sh  security-check.sh  setup-production.sh  setup.sh  setup_redis_cache.sh  tools.sh  validate-setup.sh
scripts/docker/: db-backup.sh  docker-cleanup.sh  docker-manager.sh  health-check.sh  ssl-manager.sh
tools/: developer_testing_tools.py  requirements.txt  test_data_manager.py
(+244 files in other folders)
